test bot env token

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN="123456:ABC..."
+BOT_TOKEN="6076340382:AAGlQ_62XI072ax7T--tfjNPFxdxK-0OhwY"
 # ID адмін-групи (куди летить черга модерації)
 ADMIN_GROUP_ID=-1001234567890
 # Список публічних місць публікації (через кому). Можуть бути групи або канали
