--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-BOT_TOKEN=123456:ABCDEF_your_bot_token
+BOT_TOKEN=123456:ABC...
+WEBHOOK_URL=https://yourdomain.com
+WEBHOOK_PATH=/webhook
 ADMINS=123456789,987654321
 ADMIN_GROUP_ID=-1001234567890
 ADMIN_LOG_CHANNEL_ID=-1001234567000
