add logic && rebuilt main file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
-BOT_TOKEN=your_telegram_bot_token_here
 WEBHOOK_HOST=https://your-app-name.onrender.com
 WEBHOOK_PATH=/webhook
-PORT=10000
+# Telegram Bot Token
+BOT_TOKEN=your_bot_token_here
+
+# ID групи модераторів (де будуть кнопки "✅/❌")
+MODERATORS_CHAT_ID=-1001234567890
+
+# ID групи/каналу для публікації оголошень
+PUBLISH_CHAT_ID=-1009876543210
+
+# Налаштування сервера FastAPI
+PORT=8000
