--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ PUBLISH_CHAT_ID=-1009876543210
 
 # Налаштування сервера FastAPI
 PORT=8000
+
+BANNED_WORDS=спам,шахрайство,лохотрон,обман,scam,fraud
