--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ PUBLISH_CHAT_ID=-1009876543210
 PORT=8000
 
 BANNED_WORDS=спам,шахрайство,лохотрон,обман,scam,fraud
+DISTRICTS=Центр,Лівий берег,Правий берег
