--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ PORT=8000
 
 BANNED_WORDS=спам,шахрайство,лохотрон,обман,scam,fraud
 DISTRICTS=Центр,Лівий берег,Правий берег
+AUTOPOST_INTERVAL=3600
+FAQ=Що таке бот?|Це бот для оголошень;Як додати оголошення?|Натисніть кнопку "Подати оголошення";Як швидко публікують?|Зазвичай до 1 години
