--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,28 @@
+# Telegram bot
 aiogram==2.25.1
+
+# Асинхронні HTTP запити
+aiohttp==3.9.5
+
+# Веб-сервер для FastAPI
 fastapi==0.115.0
-uvicorn==0.30.6
-pydantic==2.9.2
+uvicorn[standard]==0.30.6
+
+# Планувальник задач
+apscheduler==3.10.4
+
+# Робота з .env
 python-dotenv==1.0.1
+
+# Локалізація / дати
+Babel==2.15.0
+
+# Моделі даних для FastAPI
+pydantic==2.9.2
+
+# Робота з базами даних
 SQLAlchemy==2.0.35
-aiosqlite==0.20.0
-python-multipart==0.0.6
+databases==0.9.0
+
+# SSL / сертифікати
+certifi==2024.8.30
